--- a/templates/adminpanel/base.html
+++ b/templates/adminpanel/base.html
@@ -242,6 +242,23 @@
 	})
 	</script>
 	
+	<script>
+      (function(d,t) {
+        var BASE_URL="https://support-panel.soatrix.com";
+        var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+        g.src=BASE_URL+"/packs/js/sdk.js";
+        g.defer = true;
+        g.async = true;
+        s.parentNode.insertBefore(g,s);
+        g.onload=function(){
+          window.chatwootSDK.run({
+            websiteToken: 'CA3sjCu8gWBnyJurLNp6bNbn',
+            baseUrl: BASE_URL
+          })
+        }
+      })(document,"script");
+    </script>
+	
 	{% block footer_scripts %}{% endblock %}
 
 </body>
